feat: modificacion 1 del index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="container">
         <h1>Bienvenido a nuestra página</h1>
         <p>Esta es una página de ejemplo con un diseño simple pero elegante.</p>
+        <p>Esta modificacion fue hecha por Andro</p>
     </div>
 </body>
 </html>
