feat: modificacion 21 de febrero index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h1>Bienvenido a nuestra página</h1>
         <p>Esta es una página de ejemplo con un diseño simple pero elegante.</p>
         <p>Esta modificacion fue hecha por Andro</p>
+        <p>chispitas</p>
     </div>
 </body>
 </html>
