feat: modificacion index 21 de feb

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p>Esta es una página de ejemplo con un diseño simple pero elegante.</p>
         <p>Esta modificacion fue hecha por Andro</p>
         <p>chispitas</p>
+        <p>Modificacion profe Bernardo</p>
     </div>
 </body>
 </html>
